Fix word break on mobile

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -8,6 +8,17 @@ body {
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 20px;
   line-height: 35px;
+  -ms-word-break: break-all;
+
+  // Be VERY careful with this, breaks normal words wh_erever
+  word-break: break-all;
+
+  // Non standard for webkit
+  word-break: break-word;
+
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  hyphens: auto;
 }
 
 p {
@@ -32,7 +43,7 @@ blockquote {
 }
 
 pre, code {
- font: 15px Monaco, Courier, monospace;
+  font: 15px Monaco, Courier, monospace;
 }
 
 pre {
@@ -46,6 +57,7 @@ pre {
   white-space: pre;
   width: inherit;
   word-wrap: normal;
+  word-break: normal;
 }
 
 pre code {
